# agent-cad

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  start.sh
backend/: mcp_server.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: messages.py
backend/app/routers/: health.py  model.py  ws.py
backend/app/services/: ai_agent.py  cad_engine.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CadEdges.tsx  CadModel.tsx  CadViewer.tsx  ChatPanel.tsx  DrawingOverlay.tsx  FaceListPanel.tsx  FeatureNameDialog.tsx  FeaturesPanel.tsx  MeasurementDisplay.tsx  OriginAxes.tsx  RightPanel.tsx  Toolbar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: useModelStore.ts
frontend/src/types/: index.ts
