[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cad"
version = "0.1.0"
description = "A harness for building CAD with AI agents"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Brian Ratliff"}]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "anthropic>=0.42",
    "cadquery>=2.4",
    "numpy>=1.26",
    "pydantic>=2.10",
    "python-multipart>=0.0.18",
]
